# aether-engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/briefing/: Cargo.toml
crates/briefing/src/: lib.rs  main.rs  smtp.rs
crates/briefing/tests/: capstone.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: client.rs  embed.rs  embed_onnx.rs  filter.rs  lib.rs  net.rs  shard.rs  tdigest.rs
crates/common/tests/: onnx_embed.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs  network.rs  s3.rs  service.rs  storage.rs  wal.rs
crates/consensus/tests/: second_state_machine.rs
crates/coordinator/: Cargo.toml
crates/coordinator/examples/: aggregate.rs  cluster_query.rs  cluster_state.rs  hybrid_query.rs  loadgen.rs  stream_query.rs
crates/coordinator/src/: agg.rs  auth.rs  control.rs  fanout.rs  hybrid.rs  lib.rs  main.rs  metrics.rs  registry.rs  service.rs
crates/coordinator/tests/: aggregate_correctness.rs  aggregate_grpc.rs  client_failover.rs  control_chaos.rs  control_group.rs  deadline_grpc.rs  filter_grpc.rs  provenance_grpc.rs  ranking_eval.rs  registration_grpc.rs  scatter_gather_grpc.rs  token_scopes.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: index.html  main.rs  supervisor.rs
crates/dashboard/src/web/: app.js  index.html  styles.css
crates/dashboard/tests/: panels.rs
crates/federation/: Cargo.toml
crates/federation/src/: lib.rs
crates/federation/tests/: two_clusters.rs
crates/mcp-agent/: Cargo.toml
crates/mcp-agent/src/: main.rs
crates/mcp-agent/tests/: mcp_protocol.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/nlq/: Cargo.toml
crates/nlq/eval/: questions.json
crates/nlq/src/: bedrock.rs  lib.rs  main.rs  openai.rs
crates/nlq/tests/: nlq_loop.rs
crates/shard-node/: Cargo.toml
crates/shard-node/examples/: query.rs  shard_query.rs
crates/shard-node/src/: agg.rs  cluster.rs  index.rs  ingest.rs  lib.rs  main.rs  quant.rs  replication.rs  server.rs  store.rs  vector.rs
crates/shard-node/src/raft/: bootstrap.rs  eviction.rs  mod.rs  network.rs  reconcile.rs  service.rs  storage.rs  wal.rs
crates/shard-node/tests/: advertise.rs  coordinator_failover.rs  eviction_chaos.rs  ingest_flood.rs  legacy_split_brain.rs  mtls.rs  mtls_denied.rs  multi_coordinator.rs  onnx_store.rs  opensky_live.rs  quant_bench.rs  raft_asymmetric.rs  raft_chaos.rs  raft_cluster.rs  raft_group.rs  raft_join.rs  raft_partition.rs  raft_relocate.rs  raft_restart.rs  raft_vshard.rs  registration.rs  replication.rs  s3_snapshot.rs  scale.rs  search_grpc.rs  siem.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
deploy/: COST.md  chaos-run.sh  partition-run.sh  provision.sh  teardown.sh
docs/: DEMO.md
proto/: aether.proto
scripts/: bench.sh  check-palette.sh  demo.sh  fetch-model.sh  gen-certs.sh  live-eval-local.sh  validate_palette.js
