[workspace]
resolver = "2"
members = [
    "crates/agent-tools",
    "crates/common",
    "crates/consensus",
    "crates/coordinator",
    "crates/dashboard",
    "crates/mcp-agent",
    "crates/nlq",
    "crates/shard-node",
    "crates/testkit",
]

# Centralize shared versions here so every crate uses one source of truth.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tonic-build = "0.12"

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/parammadan/aether-engine"

[profile.release]
lto = "thin"
codegen-units = 1
