[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

# Shared crate: the generated gRPC contract (from ../../proto) plus cross-cutting
# domain logic that both the coordinator and shard nodes must agree on — starting with
# the shard-key hashing, which MUST be identical everywhere or documents land on the
# wrong shard.

[dependencies]
tonic.workspace = true
prost.workspace = true
ort = { version = "2.0.0-rc.12", optional = true }
tokenizers = { version = "0.23", optional = true }

[build-dependencies]
tonic-build.workspace = true

[features]
# Learned-model embeddings via ONNX Runtime. Off by default: the native runtime and
# tokenizer are heavy dependencies, and the deterministic hash embedder covers dev/tests.
onnx = ["dep:ort", "dep:tokenizers"]
