[package]
name = "coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

# Control plane: dynamic node discovery, the shard map, scatter-gather query fan-out,
# liveness and failover, and virtual-shard placement.

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
# Streaming responses (ReceiverStream) for progressive scatter-gather; TcpListenerStream in tests.
tokio-stream = { version = "0.1", features = ["net", "sync"] }
