[package]
name = "nlq"
version.workspace = true
edition.workspace = true
license.workspace = true

# Natural-language query: plain English -> a planning model -> the read-only engine tools
# -> a composed, provenance-carrying answer. The planning loop is generic over a `Model`
# so a scripted fake drives it deterministically in CI (no Bedrock call) and the real
# Bedrock Converse client plugs into the same loop for the live eval.

[[bin]]
name = "aether-nlq"
path = "src/main.rs"

[dependencies]
agent-tools = { path = "../agent-tools" }
common = { path = "../common" }
tokio = { workspace = true }
serde_json = "1"
async-trait = "0.1"
aws-config = { version = "1.9.0", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
# The live Bedrock planner (env-gated eval). Off by default: the default build and CI
# link no AWS SDK and drive the loop with a scripted model.
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
# An OpenAI-compatible planner: works against ANY OpenAI-style /chat/completions endpoint
# — OpenAI, Groq (free tier, hosted open-source Llama), Together, OpenRouter, Fireworks.
# Off by default; the default build and CI link no HTTP client and use the scripted model.
openai = ["dep:reqwest"]

[dev-dependencies]
coordinator = { path = "../coordinator" }
shard-node = { path = "../shard-node" }
tokio-stream = { version = "0.1", features = ["net"] }
tonic.workspace = true
