[package]
name = "shard-node"
version.workspace = true
edition.workspace = true
license.workspace = true

# Data plane: holds a shard's inverted index and serves the `ShardSearch` gRPC service.
# STUB in Q1 — the index + server come later this quarter (next sessions). Depends on
# `common` for the shared contract and shard-key logic.

[dependencies]
common = { path = "../common" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
# Ingestion: pull flight snapshots over HTTPS (rustls, no OpenSSL) and parse the JSON.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
# Approximate nearest-neighbour index (pure Rust HNSW) for semantic search.
hnsw_rs = "0.3"

[dev-dependencies]
# Adapts a bound TcpListener into a stream for tonic's serve_with_incoming, so the
# integration test can grab an ephemeral port instead of racing on a fixed one.
tokio-stream = { version = "0.1", features = ["net"] }
# Dev-only: run a real coordinator in-process to test the registration client end-to-end.
coordinator = { path = "../coordinator" }
